package no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects;

public enum GemType {
    DEFAULT,
    RUBY,
    STAR,
    COIN,
    METEORITE
}
