package no.ntnu.idi.apollo69framework.network_messages.data_transfer_objects;

public enum PowerupType {
    ENERGY,
    HEALTH,
    SHIELD,
    INVISIBLE
}
